# SpaceTune

./: .gitignore  Dockerfile  Dockerfile.pg  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml
migrations/: env.py
migrations/versions/: 08571ca24c78_.py  28040c380d33_.py  2dda0b1193a8_.py  56b4fbebcf6f_.py  6d82ad642a61_.py  796381395a43_.py  7fd62a55b49a_.py  9941ae0804fb_.py  a654527cf757_.py  aee4a981d88b_.py  ca29e91aa4d3_.py  da34721811f6_.py  ea68ddaae04e_.py  ed04b9ddf6a3_.py  f03029a9bfed_.py  f16ad4f904c6_.py  f2d813194519_.py  fc7572f5736d_.py  fd8194b21806_.py
src/: __init__.py  api.py  config.py  dependencies.py  exceptions.py  main.py  repository.py
src/auth/: config.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
src/auth/repositories/: postgres.py
src/auth/utils/: hash_generation.py
src/aws/: __init__.py  client.py  config.py  constants.py
src/aws/utils/: __init__.py  actions.py
src/databases/: __init__.py  sql_db.py
src/modules/: __init__.py  exception_schema.py
src/modules/auth/: __init__.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
src/modules/grades/: __init__.py  dependencies.py  models.py  repository.py  router.py  service.py
src/modules/music/: __init__.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
src/modules/profile/: __init__.py  dependencies.py  models.py  repository.py  router.py  service.py
src/repositories/: __init__.py  postgres.py
src/utils/: __init__.py
(+60 files in other folders)
