[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.17.2",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "boto3[crt]>=1.42.52",
    "datetime>=6.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "psycopg2>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.11.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "uvicorn==0.38.0",
]
